--- a/.github/workflows/workflow1.yml
+++ b/.github/workflows/workflow1.yml
@@ -1,12 +1,10 @@
 name: Push-to-EC2-cometa_test
 
-# Пушить только на изменения в ветке main
 on:
   push:
     branches:
       - main
 
-# Выполнить джоб с заданным именем на последней убунте
 jobs:
   deploy:
     name: Deploy to EC2 on master branch push
@@ -61,5 +59,13 @@ jobs:
             }
             EOF'
 
-            # Перезапустить Nginx
-            sudo systemctl restart nginx
+            # Проверка конфигурации Nginx на наличие синтаксических ошибок
+            sudo nginx -t
+
+            # Перезапуск Nginx только если синтаксическая проверка успешна
+            if [ $? -eq 0 ]; then
+              sudo systemctl restart nginx
+            else
+              echo "Nginx configuration test failed. Please check the configuration."
+              exit 1
+            fi
