--- a/.github/workflows/workflow1.yml
+++ b/.github/workflows/workflow1.yml
@@ -31,41 +31,4 @@ jobs:
           script: |
             # Переместить все HTML файлы в целевую директорию
             sudo mv /home/ubuntu/test2.page/web_test/pages/* /var/www/test2.page/
-
-            # Создать конфигурационный файл Nginx для каждого HTML файла
-            sudo bash -c 'cat > /etc/nginx/sites-available/default <<EOF
-            server {
-                listen 80 default_server;
-                listen [::]:80 default_server;
-
-                server_name _;
-
-                location / {
-                    root /var/www/test2.page;
-                    autoindex on;
-                }
-
-            EOF'
-            for file in /var/www/test2.page/*.html; do
-              filename=$(basename "$file")
-              sudo bash -c "cat >> /etc/nginx/sites-available/default <<EOF
-                location /$filename {
-                    root /var/www/test2.page;
-                    index $filename;
-                }
-            EOF"
-            done
-            sudo bash -c 'cat >> /etc/nginx/sites-available/default <<EOF
-            }
-            EOF'
-
-            # Проверка конфигурации Nginx на наличие синтаксических ошибок
-            sudo nginx -t
-
-            # Перезапуск Nginx только если синтаксическая проверка успешна
-            if [ $? -eq 0 ]; then
-              sudo systemctl restart nginx
-            else
-              echo "Nginx configuration test failed. Please check the configuration."
-              exit 1
-            fi
+            sudo service nginx restart
