--- a/.github/workflows/workflow1.yml
+++ b/.github/workflows/workflow1.yml
@@ -14,13 +14,14 @@ jobs:
       - name: Checkout the files
         uses: actions/checkout@v2
 
-      - name: Deploy to cometa_test
-        uses: easingthemes/ssh-deploy@main
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
-          REMOTE_USER: ${{ secrets.REMOTE_USER }}
-          TARGET: ${{ secrets.TARGET }}
+      - name: Copy files to EC2
+        uses: appleboy/scp-action@v0.1.0
+        with:
+          host: ${{ secrets.REMOTE_HOST }}
+          username: ${{ secrets.REMOTE_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: "./web_test/*"
+          target: "/home/ubuntu/test2.page/"
 
       - name: Executing remote ssh commands using ssh key
         uses: appleboy/ssh-action@master
@@ -33,15 +34,7 @@ jobs:
             sudo mkdir -p /var/www/test2.page
 
             # Переместить все HTML, CSS, JS, FIG и другие файлы в целевую директорию
-            sudo cp -r ${{ secrets.TARGET }}/* /var/www/test2.page/
-            sudo cp -r ${{ secrets.TARGET }}/web_test/pages/* /var/www/test2.page/
-            sudo cp -r ${{ secrets.TARGET }}/web_test/fonts/* /var/www/test2.page/fonts/
-            sudo cp -r ${{ secrets.TARGET }}/web_test/imgs/* /var/www/test2.page/imgs/
-            sudo cp -r ${{ secrets.TARGET }}/web_test/*.html /var/www/test2.page/
-            sudo cp -r ${{ secrets.TARGET }}/web_test/*.css /var/www/test2.page/
-            sudo cp -r ${{ secrets.TARGET }}/web_test/*.js /var/www/test2.page/
-            sudo cp -r ${{ secrets.TARGET }}/web_test/*.json /var/www/test2.page/
-            sudo cp -r ${{ secrets.TARGET }}/web_test/*.fig /var/www/test2.page/
+            sudo cp -r /home/ubuntu/test2.page/* /var/www/test2.page/
 
             # Проверка конфигурации Nginx на наличие синтаксических ошибок
             sudo nginx -t
