--- a/.github/workflows/workflow1.yml
+++ b/.github/workflows/workflow1.yml
@@ -1,20 +1,23 @@
 name: Push-to-EC2-cometa_test
-
+# Пушить только на изменения в ветке main
 on:
   push:
     branches:
       - main
 
+# Выполнить джоб с заданным именем на последней убунте
 jobs:
   deploy:
     name: Deploy to EC2 on master branch push
     runs-on: ubuntu-latest
 
+# проверить файлы
     steps:
       - name: Checkout the files
         uses: actions/checkout@v2
 
-      - name: Deploy to cometa_test
+# подключиться к серверу, используя заданные ранее # #переменные и скинуть в папку $TARGET наш репозиторий.
+      - name: Deploy to Cometa-Prod
         uses: easingthemes/ssh-deploy@main
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
@@ -22,6 +25,7 @@ jobs:
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           TARGET: ${{ secrets.TARGET }}
 
+# выполнить удаленные команды на сервере - переместить #файлы, перезапустить веб-сервер.
       - name: Executing remote ssh commands using ssh key
         uses: appleboy/ssh-action@master
         with:
@@ -29,19 +33,5 @@ jobs:
           username: ${{ secrets.REMOTE_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            # Создать целевую директорию, если она не существует
-            sudo mkdir -p /var/www/test2.page
-
-            # Переместить все HTML, CSS, JS, FIG и другие файлы в целевую директорию
-            sudo cp -r /home/ubuntu/test2.page/web_test/* /var/www/test2.page/
-
-            # Проверка конфигурации Nginx на наличие синтаксических ошибок
-            sudo nginx -t
-
-            # Перезапуск Nginx только если синтаксическая проверка успешна
-            if [ $? -eq 0 ]; then
-              sudo systemctl restart nginx
-            else
-              echo "Nginx configuration test failed. Please check the configuration."
-              exit 1
-            fi
+            sudo cp -r /home/ubuntu/test2.page/* /var/www/test2.page/
+            sudo service nginx restart
